Updated war file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,4 @@ steps:
     azureSubscription: 'secretconnection'
     appType: webAppLinux
     appName: 'deckerjava'
-    package: '$(System.DefaultWorkingDirectory)/**/*.war'
+    package: '$(System.DefaultWorkingDirectory)/**/SampleWebApp.war.war'
